- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.12
 - 
    None
 - 
    Debian 8 PPC on PowerMac G5
 
g++ Wl,no-undefined -Wl,version-script,QtGui.version -fuse-ld=gold -Wl,enable-new-dtags -Wl,-gdb-index -Wl,-rpath,/home/rutledge/dev/qt5-dbg/qtbase/lib -shared -Wl,-soname,libQt5Gui.so.5 -o libQt5Gui.so.5.12.0 .obj/qimage_compat.o .obj/qaccessible.o ... .obj/moc_qopengltimerquery.o  -L/home/rutledge/dev/qt5-dbg/qtbase/lib -lQt5Core -lpthread -latomic -lGL -lpng12 -lqtharfbuzz -lz
/home/rutledge/dev/qt5/qtbase/src/gui/painting/qdrawhelper.cpp:596: error: undefined reference to 'void storePixel<(QPixelLayout::BPP)6>(unsigned char*, int, unsigned int)'
collect2: error: ld returned 1 exit status
Makefile:1240: recipe for target '../../lib/libQt5Gui.so.5.12.0' failed
| For Gerrit Dashboard: QTBUG-69951 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 237365,3 | Fix big-endian build | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |